--- a/platform.html
+++ b/platform.html
@@ -54,7 +54,6 @@
                 <div class='menu' style="position: absolute; right: 20px; z-index: 5;" ><a  onclick="myFunction()"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#266BCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></a></svg></div>
             </div>
             <div id='content1' >
-                <div style="margin-left: auto; margin-right: auto; width: 200px; align-items: center;"><a style="text-align:center;"  href="story.html" class='btn menu'>IAN'S STORY</a></div>
                 <div style="margin-left: auto; margin-right: auto; width: 200px; align-items: center;"><a style="text-align:center;"  href="platform.html" class='btn menu'>IAN'S VISION</a></div>
                 <div style="margin-left: auto; margin-right: auto; width: 200px; align-items: center;"><a style="text-align:center;"  href="contact.html" class='btn menu'>GET IN TOUCH</a></div>
                 <div style="margin-left: auto; margin-right: auto; width: 200px; align-items: center;"><a style="text-align:center;" href="donate.html" class='btn menu'>DONATE</a></div>
@@ -63,54 +62,51 @@
         <div id='butter'>
         <div class="contactphoto">
         </div>
-        <div style="height: auto;">
+        <div class='feg' style="height: auto;">
             <div class='boldideas'>Ideas Through Lived Experience </div>
-            <div class='buildback'>We aren't just going to rebuild what has worked in the past. This is our opportunity to build back greater than ever through the lens of everyday Calgarians.</div>
-            <div class='buildback' style="margin-bottom: 0px;">"Therefore give me one moment in time to set my destiny for the betterment of this and future generations."</div>
-            <div class='buildback'>- Ian Chiang</div>
+            <div class='buildback'>This is our opportunity to build back greater than ever through the lens of everyday Calgarians.</div>
+            <div class='buildback1' style="margin-bottom: 0px;">"Therefore give me one moment in time to set my destiny for the betterment of this and future generations."</div>
+            <div class='buildback1'>- Ian Chiang</div>
         </div>
         <div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">BUILD BACK BETTER: Ian's Plan for Calgary's Economic Recovery</button>
-                    <div class="content">
-                        This is where your platform is going to go
-                    </div>
+                <button type="button" class="collapsible">I have 3 major plans to revitalize the economy of Calgary. They will be disclosed at the Final Television Debate.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">build back better: Ian's plan for municipal transparency</button>
-                    <div class="content">
-                        This is where your platform is going to go
-                    </div>
+                <button type="button" class="collapsible">I will reduce my salary as mayor by 25% to reduce the city's operating costs.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">build back better: Ian's plan for addressing Climate change</button>
-                    <div class="content">
-                        This is where your platform is going to go
-                    </div>
+                <button type="button" class="collapsible">To improve traffic flow & safety in simple ways.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Build Back Better: Ian's plan for small and local businesses</button>
+                <button type="button" class="collapsible">To promote/maintain calgary as world's no. 1 cleanest city.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for Combating Coronavirus (covid-19)</button>
+                <button type="button" class="collapsible">To improve the safety of patios by encouraging new university graduates to volunteer as inspectors.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for equality</button>
+                <button type="button" class="collapsible">To support oil and gas industries until/unless vehicles are no longer dependent on gasoline.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for combating homelessness</button>
+                <button type="button" class="collapsible">To promote solar & wind energy for electricity production.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for transportation</button>
+                <button type="button" class="collapsible">To promote the links of community associations by bridging western and eastern cultures.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for municipal services</button>
+                <button type="button" class="collapsible">To promote calgary as a major engineering hub as well as a centre for export instead of import.</button>
             </div>
              <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for urban planning and housing</button>
+                <button type="button" class="collapsible">To improve the operating cost and the quality of municipal tap water.</button>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for cultural development</button>
+                <button type="button" class="collapsible">To promote calgary as a major center for multi-cultural events and martial arts competitions</button>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">To advance it & ai technologies.</button>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">To control the noise & exhaust pollutions of vehicles.</button>
             </div>
         </div>
     
