--- a/story.html
+++ b/story.html
@@ -49,7 +49,6 @@
                 <div class='menu' style="position: absolute; right: 20px; z-index: 5;" ><a  onclick="myFunction()"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#266BCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></a></svg></div>
             </div>
             <div id='content1' style="z-index: 11;">
-                <div style=" z-index: 11; margin-left: auto; margin-right: auto; width: 200px; align-items: center;"><a style="text-align:center;"  href="story.html" class='btn menu'>IAN'S STORY</a></div>
                 <div style="z-index: 11; margin-left: auto; margin-right: auto; width: 200px; align-items: center;"><a style="text-align:center;"  href="platform.html" class='btn menu'>IAN'S VISION</a></div>
                 <div style="z-index: 11; margin-left: auto; margin-right: auto; width: 200px; align-items: center;"><a style="text-align:center;"  href="contact.html" class='btn menu'>GET IN TOUCH</a></div>
                 <div style="z-index: 11; margin-left: auto; margin-right: auto; width: 200px; align-items: center;"><a style="text-align:center;" href="donate.html" class='btn menu'>DONATE</a></div>
@@ -59,6 +58,7 @@
             <img src="img/car.png" class='car'>
         </div>
         <div id='butter'>
+        <div></div>
         <div class='front'>
         </div>
         <div class="ianstory">IAN'S STORY.</div>
@@ -66,9 +66,9 @@
         <div><img src="img/ianpage.png" alt="" srcset="" style="position: absolute; top: 150px; left: 56vw; width: 600px; height: 400px;"></div>
         <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 600px;"></div>
         <div class='a1'>Humble Beginnings</div>
-        <div class='a2'>Born in Brunei</div>
+        <div class='a2' style="top: 800px;">Born in Brunei</div>
         <div class='a3' >A small country located in Asia</div>
-        <img src="img/world.png" style="position: absolute; top: 1000px; left: 50vw; width: 700px; height: 250px;" alt="" loading='lazy'>
+        <img src="img/world.png" style="position: absolute; top: 1000px; left: 50vw; width: 500px; height: 170px;" alt="" loading='lazy'>
         <div class='b1'>Young, Talented, Driven.</div>
         <div class="b2">First Real Job</div>
         <div class='b3'>at Shell&copy; Liquified Natural Gas in 1975</div>
