--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 
     <div id='butter'>
         <div class='front-page' style="height: 750px;">
-            <img src="img/better.png" loading='lazy' style="height: 750px;  width: 1500px; margin-left: auto; margin-right: auto; left: 50%;
+            <img src="img/better.png" class='desktop'loading='lazy' style="height: 750px;  width: 1500px; margin-left: auto; margin-right: auto; left: 50%;
             margin-left: -800px;
             position:absolute;" >
+            <img src="img/betterm.png" alt="" class='mobile' style="height: 750px; width: auto; ">
         </div>
         <div class="vision" style="overflow: hidden;">
             <div class="bold" style="overflow: hidden;">IAN'S VISION</div>
@@ -85,7 +86,7 @@
                 <div class="text-trio">
                     <div class="text">Copyright &copy; 2021 <a href="#"></a></div>
                     <div class="text">All Rights Reserved</div>
-                    <div class="text">Designed by <a href="#">Tony Jiang & Meet Bhatt</a></div>
+                    <div class="text">Designed by <a href="#">Meet Bhatt</a></div>
                 </div>
             </div>
         </footer>
