--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="vision" style="overflow: hidden;">
             <div class="bold" style="overflow: hidden;">IAN'S VISION</div>
-            <div class="nonbold" style="overflow: hidden;">We are in the battle for the future and the soul of Calgary. We choose hope over fear. Truth and transparency over lies. And unity over division. We treat each other with dignity, we leave nobody behind, and we give hate no safe harbour.</div>
+            <div class="nonbold" style="overflow: hidden;">This election is about you; your children, your job, your retirement and your future. It is vital that we choose a strong economic recovery, transparency over lies as well as unity over division. After all, Calgary is my home as well as yours, so let's make it the best it can be.  </div>
             <div class="link"><a href="platform.html" class="btn platformbtn">This is what Ian believes in.</a></div>
         </div>
         <div class='story' style="overflow: hidden;">
