--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Ian Chianwefwg</title>
+        <title>Ian Chiang</title>
         <link rel = "stylesheet" href = "styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="script.js"></script>
