--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
        background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 16%,rgba(255,255,255,0.98) 52%,rgba(255,255,255,0.92) 73%,rgba(255,255,255,0.57) 90%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */" >
             <div class='container1'>
-                <b href="index.html" rel='home button'>
+                <b href="index.html" rel='home button' style="z-index: 5;">
                     <a href="index.html"><img src="img/logo.png" width='135' height='42' style="padding-top: 10px; padding-right: 2vw; padding-left: 2vw; max-height: 42px;"></a>
                 </b>
                 <ul id='ul'>
