--- a/donate.html
+++ b/donate.html
@@ -72,7 +72,7 @@
                 <div class="text-trio">
                     <div class="text">Copyright &copy; 2021 <a href="#"></a></div>
                     <div class="text">All Rights Reserved</div>
-                    <div class="text">Designed by <a href="#">Tony Jiang & Meet Bhatt</a></div>
+                    <div class="text">Designed by <a href="#">Meet Bhatt</a></div>
                 </div>
             </div>
         </footer>
