--- a/story.html
+++ b/story.html
@@ -82,7 +82,7 @@
         <img src="img/child.jpg" loading='lazy' style='position: absolute; top: 2660px; left: 56vw; width:185px; height: 250px; float: ri2ght;'  alt="">
         <div class='b1' style="top:3200px;">Rebuilding</div>
         <div class='b2' style="top: 3300px;">Back to School</div>
-        <div class='b3' style='top: 3350px;'>Graduates from SAIT with An Engineering Design & Drafting Technology Degree</div>
+        <div class='b3' style='top: 3350px;'>Graduates from SAIT with An Engineering Design & Drafting Technology Diploma</div>
         <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 2400px;"></div>
         <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 3600px;"></div>
         <div class="a1" style="top: 3600px;">Job Hunting in Calgary's Economy</div>
