--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class='story' style="overflow: hidden;">
             <div class='bg' style="float: left;" style="overflow: hidden;"> 
                 <div class='rep' style="overflow: hidden;">A perfect representation of hard working Calgarians...</div>
-                <div class='intro' style="overflow: hidden;  ">Father of 3, Husband, Oil and gas engineer, Immigrant.</div>
+                <div class='intro' style="overflow: hidden;  ">Father of 3, Husband, Oil and gas worker, Immigrant.</div>
                 <div class="link1"> <a href='story.html' class='btn storybtn'>Read Ian's story</a></div>
             </div>
             <div class='first'>
