--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Candidate Website</title>
+        <title>Ian Chiang</title>
         <link rel = "stylesheet" href = "styles.css">
         <link rel="stylesheet" href="donatestyles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
